# dice

./: .gitignore  CHANGES.rst  LICENSE  MANIFEST.in  README.md  entrypoints.txt  requirements.txt  setup.cfg  setup.py
dice/: __main__.py  __metadata__.py  api.py  cli.py  dice.lark  parser.py
dice/web/: app.py
dice/web/templates/: index.html
requirements/: requirements-debug.txt  requirements-release.txt
tests/: benchmark.py  conftest.py  test_dice.py
