[metadata]
name = dice
license_file = LICENSE
description_file = README.md

[tool:pytest]
timeout = 300
testpaths = tests
addopts =
    # ----- Reporting -----
    # stdout
    -s
    # Reduce spam
    -p no:logging
norecursedirs = .git build dist* *.egg-info provision
looponfailroots = dice tests
flake8-ignore =
    *.py E201
    *.py E231
    *.py E501
    *.py F812
    __*.py ALL
    docs/*.py ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
jobs = 8
hang_closing = True
ignore =
    E201,
    E231,
    E501,
    F812,
exclude =
    setup.py,
    tests,
    doc,
    .git,
    build,
    dist,
    __pycache__,


[isort]
line_length = 140
indent = '    '
multi_line_output = 3
length_sort = False
combine_star = True
not_skip = __init__.py
known_first_party = dice
